src/test/ui/mismatched_types/closure-arg-count.stderr
error[E0593]: closure takes 0 arguments but 2 arguments are required
  --> $DIR/closure-arg-count.rs:17:9
   |
17 |     vec.sort_by(|| panic!());
   |         ^^^^^^^ ----------- takes 0 arguments
   |         |
   |         expected closure that takes 2 arguments

error[E0593]: closure takes 1 argument but 2 arguments are required
  --> $DIR/closure-arg-count.rs:18:9
   |
18 |     vec.sort_by(|tuple| panic!());
   |         ^^^^^^^ ---------------- takes 1 argument
   |         |
   |         expected closure that takes 2 arguments

error[E0308]: mismatched types
  --> $DIR/closure-arg-count.rs:19:18
   |
19 |     vec.sort_by(|(tuple, tuple2)| panic!());
   |                  ^^^^^^^^^^^^^^^ expected &{integer}, found tuple
   |
   = note: expected type `&{integer}`
              found type `(_, _)`

error[E0593]: closure takes 1 argument but 2 arguments are required
  --> $DIR/closure-arg-count.rs:19:9
   |
19 |     vec.sort_by(|(tuple, tuple2)| panic!());
   |         ^^^^^^^ -------------------------- takes 1 argument
   |         |
   |         expected closure that takes 2 arguments

error[E0593]: function takes 0 arguments but 2 arguments are required
  --> $DIR/closure-arg-count.rs:20:9
   |
11 | fn foo() {}
   | ----------- takes 0 arguments
...
20 |     vec.sort_by(foo);
   |         ^^^^^^^ expected function that takes 2 arguments

error[E0593]: function takes 1 argument but 2 arguments are required
  --> $DIR/closure-arg-count.rs:21:9
   |
12 | fn bar(x: &usize) {}
   | -------------------- takes 1 argument
...
21 |     vec.sort_by(bar);
   |         ^^^^^^^ expected function that takes 2 arguments

error: aborting due to 6 previous errors

